core/graph.h

struct Graph {
   struct hashtable* vertices;
};
struct ShortestPathTree {
   struct hashtable* vertices;
};
struct Vertex {
   int degree_out;
   int degree_in;
   ListNode* outgoing;
   ListNode* incoming;
   char* label;
    
   int deleted_neighbors;
} ;
struct SPTVertex {
   int degree_out;
   int degree_in;
   ListNode* outgoing;
   ListNode* incoming;
   char* label;
   State* state;
   int hop;
   Vertex *mirror;
} ;
struct Edge {
  Vertex* from;
  Vertex* to;
  EdgePayload* payload;
  int enabled;
} ;
void
gRemoveVertex( Graph* self, char *label, int free_edge_payloads );
Vertex*
gGetVertex( Graph* self, char *label );
void
gAddVertices( Graph* self, char **labels, int n );
Edge*
gAddEdge( Graph* self, char *from, char *to, EdgePayload *payload );
Vertex**
gVertices( Graph* self, long* num_vertices );
ShortestPathTree*
gShortestPathTree( Graph* self, char *from, char *to, State* init_state, WalkOptions* options, long maxtime, int hoplimit, long weightlimit );
ShortestPathTree*
gShortestPathTreeRetro( Graph* self, char *from, char *to, State* init_state, WalkOptions* options, long mintime, int hoplimit, long weightlimit );
//direction specifies forward or retro routing
State*
gShortestPath( Graph* self, char *from, char *to, State* init_state, int direction, long *size, WalkOptions* options, long timelimit, int hoplimit, long weightlimit );
long
gSize( Graph* self );
void
gSetVertexEnabled( Graph *self, char *label, int enabled );
//SPT METHODS

ShortestPathTree*
sptNew(void);
void
sptDestroy( ShortestPathTree *self );
SPTVertex*
sptAddVertex( ShortestPathTree *self, Vertex *mirror, int hop );
void
sptRemoveVertex( ShortestPathTree *self, char *label );
SPTVertex*
sptGetVertex( ShortestPathTree *self, char *label );