java/src/main/java/org/graphserver/jna/GraphserverLibrary.java

	/**
	 * Original signature : <code>void gRemoveVertex(Graph*, const char*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:65</i><br>
	 * @deprecated use the safer methods {@link #gRemoveVertex(org.graphserver.jna.Graph, java.lang.String, int)} and {@link #gRemoveVertex(org.graphserver.jna.Graph, com.sun.jna.Pointer, int)} instead
	 */
	@java.lang.Deprecated 
	void gRemoveVertex(org.graphserver.jna.Graph this_, Pointer label, int free_edge_payloads);
	/**
	 * Original signature : <code>void gRemoveVertex(Graph*, const char*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:65</i>
	 */
	void gRemoveVertex(org.graphserver.jna.Graph this_, java.lang.String label, int free_edge_payloads);
	/**
	 * Original signature : <code>Vertex* gGetVertex(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:68</i><br>
	 * @deprecated use the safer methods {@link #gGetVertex(org.graphserver.jna.Graph, java.lang.String)} and {@link #gGetVertex(org.graphserver.jna.Graph, com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.Vertex gGetVertex(org.graphserver.jna.Graph this_, Pointer label);
	/**
	 * Original signature : <code>Vertex* gGetVertex(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:68</i>
	 */
	org.graphserver.jna.Vertex gGetVertex(org.graphserver.jna.Graph this_, java.lang.String label);
	/**
	 * Original signature : <code>void gAddVertices(Graph*, const char**, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:71</i><br>
	 * @deprecated use the safer methods {@link #gAddVertices(org.graphserver.jna.Graph, java.lang.String[], int)} and {@link #gAddVertices(org.graphserver.jna.Graph, com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@java.lang.Deprecated 
	void gAddVertices(org.graphserver.jna.Graph this_, PointerByReference labels, int n);
	/**
	 * Original signature : <code>void gAddVertices(Graph*, const char**, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:71</i>
	 */
	void gAddVertices(org.graphserver.jna.Graph this_, java.lang.String labels[], int n);
	/**
	 * Original signature : <code>Edge* gAddEdge(Graph*, const char*, const char*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:74</i><br>
	 * @deprecated use the safer methods {@link #gAddEdge(org.graphserver.jna.Graph, java.lang.String, java.lang.String, org.graphserver.jna.EdgePayload)} and {@link #gAddEdge(org.graphserver.jna.Graph, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.EdgePayload)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.Edge gAddEdge(org.graphserver.jna.Graph this_, Pointer from, Pointer to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>Edge* gAddEdge(Graph*, const char*, const char*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:74</i>
	 */
	org.graphserver.jna.Edge gAddEdge(org.graphserver.jna.Graph this_, java.lang.String from, java.lang.String to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>Vertex** gVertices(Graph*, long*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:77</i>
	 */
	PointerByReference gVertices(org.graphserver.jna.Graph this_, NativeLongByReference num_vertices);
	/**
	 * Original signature : <code>ShortestPathTree* gShortestPathTree(Graph*, const char*, const char*, State*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:80</i><br>
	 * @deprecated use the safer methods {@link #gShortestPathTree(org.graphserver.jna.Graph, java.lang.String, java.lang.String, org.graphserver.jna.GraphserverLibrary.State, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} and {@link #gShortestPathTree(org.graphserver.jna.Graph, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.GraphserverLibrary.State, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.ShortestPathTree gShortestPathTree(org.graphserver.jna.Graph this_, Pointer from, Pointer to, GraphserverLibrary.State init_state, GraphserverLibrary.WalkOptions options, NativeLong maxtime, int hoplimit, NativeLong weightlimit);
	/**
	 * Original signature : <code>ShortestPathTree* gShortestPathTree(Graph*, const char*, const char*, State*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:80</i>
	 */
	org.graphserver.jna.ShortestPathTree gShortestPathTree(org.graphserver.jna.Graph this_, java.lang.String from, java.lang.String to, GraphserverLibrary.State init_state, GraphserverLibrary.WalkOptions options, NativeLong maxtime, int hoplimit, NativeLong weightlimit);
	/**
	 * Original signature : <code>ShortestPathTree* gShortestPathTreeRetro(Graph*, const char*, const char*, State*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:83</i><br>
	 * @deprecated use the safer methods {@link #gShortestPathTreeRetro(org.graphserver.jna.Graph, java.lang.String, java.lang.String, org.graphserver.jna.GraphserverLibrary.State, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} and {@link #gShortestPathTreeRetro(org.graphserver.jna.Graph, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.GraphserverLibrary.State, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.ShortestPathTree gShortestPathTreeRetro(org.graphserver.jna.Graph this_, Pointer from, Pointer to, GraphserverLibrary.State init_state, GraphserverLibrary.WalkOptions options, NativeLong mintime, int hoplimit, NativeLong weightlimit);
	/**
	 * Original signature : <code>ShortestPathTree* gShortestPathTreeRetro(Graph*, const char*, const char*, State*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:83</i>
	 */
	org.graphserver.jna.ShortestPathTree gShortestPathTreeRetro(org.graphserver.jna.Graph this_, java.lang.String from, java.lang.String to, GraphserverLibrary.State init_state, GraphserverLibrary.WalkOptions options, NativeLong mintime, int hoplimit, NativeLong weightlimit);
	/**
	 * direction specifies forward or retro routing<br>
	 * Original signature : <code>State* gShortestPath(Graph*, const char*, const char*, State*, int, long*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:87</i><br>
	 * @deprecated use the safer methods {@link #gShortestPath(org.graphserver.jna.Graph, java.lang.String, java.lang.String, org.graphserver.jna.GraphserverLibrary.State, int, com.sun.jna.ptr.NativeLongByReference, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} and {@link #gShortestPath(org.graphserver.jna.Graph, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.GraphserverLibrary.State, int, com.sun.jna.ptr.NativeLongByReference, org.graphserver.jna.GraphserverLibrary.WalkOptions, com.sun.jna.NativeLong, int, com.sun.jna.NativeLong)} instead
	 */
	@java.lang.Deprecated 
	GraphserverLibrary.State gShortestPath(org.graphserver.jna.Graph this_, Pointer from, Pointer to, GraphserverLibrary.State init_state, int direction, NativeLongByReference size, GraphserverLibrary.WalkOptions options, NativeLong timelimit, int hoplimit, NativeLong weightlimit);
	/**
	 * direction specifies forward or retro routing<br>
	 * Original signature : <code>State* gShortestPath(Graph*, const char*, const char*, State*, int, long*, WalkOptions*, long, int, long)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:87</i>
	 */
	GraphserverLibrary.State gShortestPath(org.graphserver.jna.Graph this_, java.lang.String from, java.lang.String to, GraphserverLibrary.State init_state, int direction, NativeLongByReference size, GraphserverLibrary.WalkOptions options, NativeLong timelimit, int hoplimit, NativeLong weightlimit);
	/**
	 * Original signature : <code>gSize(Graph*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:90</i>
	 */
	int gSize(org.graphserver.jna.Graph this_);
	/**
	 * Original signature : <code>void gSetVertexEnabled(Graph*, const char*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:93</i><br>
	 * @deprecated use the safer methods {@link #gSetVertexEnabled(org.graphserver.jna.Graph, java.lang.String, int)} and {@link #gSetVertexEnabled(org.graphserver.jna.Graph, com.sun.jna.Pointer, int)} instead
	 */
	@java.lang.Deprecated 
	void gSetVertexEnabled(org.graphserver.jna.Graph this_, Pointer label, int enabled);
	/**
	 * Original signature : <code>void gSetVertexEnabled(Graph*, const char*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:93</i>
	 */
	void gSetVertexEnabled(org.graphserver.jna.Graph this_, java.lang.String label, int enabled);
	/**
	 * Original signature : <code>ShortestPathTree* sptNew()</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:98</i>
	 */
	org.graphserver.jna.ShortestPathTree sptNew();
	/**
	 * Original signature : <code>void sptDestroy(ShortestPathTree*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:101</i>
	 */
	void sptDestroy(org.graphserver.jna.ShortestPathTree this_);
	/**
	 * Original signature : <code>SPTVertex* sptAddVertex(ShortestPathTree*, Vertex*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:104</i>
	 */
	org.graphserver.jna.SPTVertex sptAddVertex(org.graphserver.jna.ShortestPathTree this_, org.graphserver.jna.Vertex mirror, int hop);
	/**
	 * Original signature : <code>void sptRemoveVertex(ShortestPathTree*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:107</i><br>
	 * @deprecated use the safer methods {@link #sptRemoveVertex(org.graphserver.jna.ShortestPathTree, java.lang.String)} and {@link #sptRemoveVertex(org.graphserver.jna.ShortestPathTree, com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	void sptRemoveVertex(org.graphserver.jna.ShortestPathTree this_, Pointer label);
	/**
	 * Original signature : <code>void sptRemoveVertex(ShortestPathTree*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:107</i>
	 */
	void sptRemoveVertex(org.graphserver.jna.ShortestPathTree this_, java.lang.String label);
	/**
	 * Original signature : <code>SPTVertex* sptGetVertex(ShortestPathTree*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:110</i><br>
	 * @deprecated use the safer methods {@link #sptGetVertex(org.graphserver.jna.ShortestPathTree, java.lang.String)} and {@link #sptGetVertex(org.graphserver.jna.ShortestPathTree, com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.SPTVertex sptGetVertex(org.graphserver.jna.ShortestPathTree this_, Pointer label);
	/**
	 * Original signature : <code>SPTVertex* sptGetVertex(ShortestPathTree*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:110</i>
	 */
	org.graphserver.jna.SPTVertex sptGetVertex(org.graphserver.jna.ShortestPathTree this_, java.lang.String label);
